# GSDCP

./: .gitignore  README.md  pyproject.toml
configs/: audio-only.json  camerafi-local.json  droidcam-local.json  droidcam-nodes.json  file-watcher.json  full-pipeline-camerafi-no-screen.json  full-pipeline-camerafi.json  full-pipeline-wayatt-tests.json  full-pipeline-without-screencapture.json  full-pipeline.json  ipwebcam-local.json  ipwebcam_node.json  ivcams-phase-1.json  multi-window-capture.json  screen-recorder.json  screen-subscriber-only.json  sep-22-2023-wyatt-test1-nomac.json  sep-22-2023-wyatt-test1.json
docs/: HOWIDIDWHATIDID.md
gsdcp/: __init__.py  droidcam_node.py  efficient_screen_capture.py  files_watcher.py  files_watcher_node.py  filewatcher_node.py  ipwebcam_node.py  ivcam_node.py  screen_subscriber_node.py  threaded_droidcam_streamer.py  umc1820_node.py
runners/: run-audio.sh  run-camera-only.sh  run-full-noscreen.sh  run-full.sh
scripts/: audio_writer_test.py  droidcam_test.py  populate_dummy_files.py  rtmp_test.py  screen_publisher.py
