[project]
name = "gsdcp"
version = "0.0.1"
description = "Configurations/Implementation of ChimeraPy Pipelines for GEM-STEP data collection fall 2023"
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">3.6"

keywords = ["education", "multimodal", "data", "learning", "analytics"]

classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    'chimerapy-engine',
    'chimerapy-pipelines',
    'chimerapy-orchestrator',
]


[project.urls]
homepath = "https://github.com/oele-isis-vanderbilt/GSDCP.git"
documentation = "https://github.com/oele-isis-vanderbilt/GSDCP.git"
repository = "https://github.com/oele-isis-vanderbilt/GSDCP.git"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
ignore = ["E501"]
select = ["E", "W", "F", "C", "B", "I"]
ignore-init-module-imports = true
fixable = ["I001"]  # isort fix only
extend-exclude = ["run.py"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


# Reference:
# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
[tool.pytest.ini_options]

# Logging + CLI
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout
faulthandler_timeout=300

# Ignore warnings
filterwarnings = "ignore::DeprecationWarning"
